syntax = "proto3";
package KavaLabs.dracotest.kavadist;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/Kava-Labs/draco-test/x/kavadist/types";

message CommunityPoolMultiSpendProposal {
  option (gogoproto.goproto_stringer) = false;
  option (gogoproto.goproto_getters) = false;

  string title = 1 [ (gogoproto.moretags) = "yaml:\"title\"" ];
  string description = 2 [ (gogoproto.moretags) = "yaml:\"description\"" ];
  repeated MultiSpendRecipient recipient_list = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"recipient_list\""
  ];
}

message CommunityPoolMultiSpendProposalJSON {
  option (gogoproto.goproto_stringer) = true;
  option (gogoproto.goproto_getters) = false;

  string title = 1 [ (gogoproto.moretags) = "yaml:\"title\"" ];
  string description = 2 [ (gogoproto.moretags) = "yaml:\"title\"" ];
  repeated MultiSpendRecipient recipient_list = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"recipient_list\""
  ];
  repeated cosmos.base.v1beta1.Coin deposit = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.moretags) = "yaml:\"deposit\""
  ];
}

message MultiSpendRecipient {
  option (gogoproto.goproto_stringer) = false;
  option (gogoproto.goproto_getters) = false;

  string address = 1 [ (gogoproto.moretags) = "yaml:\"address\"" ];
  repeated cosmos.base.v1beta1.Coin amount = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.moretags) = "yaml:\"amount\""
  ];
}
